# loT_Web_ESP32

./: .gitignore  README.md
ESP32_Web_Controller/: OLED_USAGE.md  README.md  app.js  index.html  styles.css
HTTP_Demo/: CMakeLists.txt  run_idf.ps1  sdkconfig  sdkconfig.defaults
HTTP_Demo/main/: CMakeLists.txt  main.c
HTTP_Demo/main/oled/: OLED.py.txt  oled_integration.c  oled_integration.h  ssd1306.c  ssd1306.h
